--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Sistema de fidelización de clientes para PYMES"
+      content="Sistema de gestión de materiales y maquinaria para Áridos Valdez SRL"
     />
     <meta name="theme-color" content="#8B4513" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/favicon.png" />
-    <title>Fidelix - Sistema de fidelización de clientes para PYMES</title>
+    <link rel="apple-touch-icon" href="/favicon.svg" />
+    <title>Áridos Valdez SRL - Gestión de Materiales</title>
   </head>
   <body>
     <div id="root"></div>
