--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
-
-<!DOCTYPE html>
+<!doctype html>
 <html lang="es-AR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="description" content="Sistema de gestión de materiales y maquinaria para Áridos Valdez SRL" />
+    <meta
+      name="description"
+      content="Sistema de gestión de materiales y maquinaria para Áridos Valdez SRL"
+    />
     <meta name="theme-color" content="#8B4513" />
     <link rel="manifest" href="/manifest.json" />
     <link rel="apple-touch-icon" href="/favicon.svg" />
@@ -16,14 +18,15 @@
     <script type="module" src="/src/index.tsx"></script>
     <script>
       // Register service worker
-      if ('serviceWorker' in navigator) {
-        window.addEventListener('load', () => {
-          navigator.serviceWorker.register('/sw.js')
+      if ("serviceWorker" in navigator) {
+        window.addEventListener("load", () => {
+          navigator.serviceWorker
+            .register("/sw.js")
             .then((registration) => {
-              console.log('SW registered: ', registration);
+              console.log("SW registered: ", registration);
             })
             .catch((registrationError) => {
-              console.log('SW registration failed: ', registrationError);
+              console.log("SW registration failed: ", registrationError);
             });
         });
       }
