--- a/index.html
+++ b/index.html
@@ -6,30 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta
       name="description"
-      content="Sistema de gestión de materiales y maquinaria para Áridos Valdez SRL"
+      content="Sistema de fidelización de clientes para PYMES"
     />
     <meta name="theme-color" content="#8B4513" />
     <link rel="manifest" href="/manifest.json" />
-    <link rel="apple-touch-icon" href="/favicon.svg" />
-    <title>Áridos Valdez SRL - Gestión de Materiales</title>
+    <link rel="apple-touch-icon" href="/favicon.png" />
+    <title>Fidelix - Sistema de fidelización de clientes para PYMES</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/index.tsx"></script>
-    <script>
-      // Register service worker
-      if ("serviceWorker" in navigator) {
-        window.addEventListener("load", () => {
-          navigator.serviceWorker
-            .register("/sw.js")
-            .then((registration) => {
-              console.log("SW registered: ", registration);
-            })
-            .catch((registrationError) => {
-              console.log("SW registration failed: ", registrationError);
-            });
-        });
-      }
-    </script>
   </body>
 </html>
